--- a/sections/cart-drawer.liquid
+++ b/sections/cart-drawer.liquid
@@ -7,18 +7,21 @@
 {% endcomment %}
 
 {% liquid
-    assign shipping_total = section.settings.shipping_total | times: 100
-    assign show_shipping = section.settings.show_shipping_total
-    assign size = section.settings.img_size
+    assign shipping_total = settings.shipping_total | times: 100
+    assign show_shipping = settings.show_shipping_total
+    assign size = settings.img_size_cart
     assign bg_color = section.settings.background_color
     assign title_color = section.settings.title_color
     assign text_color = section.settings.text_color
     assign link_color = section.settings.link_color
     assign link_hover_color = section.settings.link_hover_color
     assign divider_color = section.settings.divider_color
-    assign cart_note = section.settings.show_cart_note
-    assign cart_attributes = section.settings.show_cart_attributes
-    assign recommend_list = section.settings.recommend_list
+    assign cart_note = settings.show_cart_note
+    assign cart_attributes = settings.show_cart_attributes
+    assign recommend_list = settings.recommend_list
+    assign recommend_type = settings.recommend_type
+    assign show_recommend = settings.show_recommend_prod
+    assign expiration_limit = settings.expiration_limit
 %}
 {% capture recommend_db %}[{% for product in recommend_list %}"{{ product.handle }}"{% if forloop.last %}{% else %},{% endif %}{% endfor %}]{% endcapture %}
 
@@ -447,16 +450,20 @@
                 </div>
             {% endif %}
         {% endfor %}
-        <div
-            id="cart-recommend"
-            data-ajax-cart-static-element
-            data-size="{{ size }}"
-            data-count-desktop="2"
-            data-count-tablet="2"
-            data-count-mobile="2"
-        >
-            <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
-        </div>
+        {% if show_recommend %}
+            <div
+                id="cart-recommend"
+                data-ajax-cart-static-element
+                data-size="{{ size }}"
+                data-days="{{ expiration_limit }}"
+                data-type="{{ recommend_type }}"
+                data-count-desktop="2"
+                data-count-tablet="2"
+                data-count-mobile="2"
+            >
+                <span class="visually-hidden">{{ 'sections.cart.recommend' | t }}</span>
+            </div>
+        {% endif %}
     </div>
     <form action="{{ routes.cart_url }}" method="post">
         <div class="cart-drawer__foter">
@@ -602,10 +609,11 @@
 <script type="application/json" data-ajax-cart-initial-state>
     {{ cart | json }}
 </script>
-<script>
-    localStorage.setItem("defaultRecommendSection", JSON.stringify({{ recommend_db }}))
-</script>
-
+{% if show_recommend %}
+    <script>
+        localStorage.setItem("defaultRecommendSection", JSON.stringify({{ recommend_db }}))
+    </script>
+{% endif %}
 <script type="module">
     import { subscribeToCartAjaxRequests, cartRequestAdd, cartRequestChange, cartRequestUpdate, subscribeToCartStateUpdate } from '{{ 'ajax-cart.js' | asset_url }}';
 </script>
@@ -616,53 +624,6 @@
 {
     "name": "Cart Drawer",
     "settings": [
-        {
-            "type": "product_list",
-            "id": "recommend_list",
-            "label": "Recommend List",
-            "limit": 4,
-            "info": "This is the default list of products that will be displayed if there are no complementary products configured for the product in the Search & Discovery admin panel"
-        },
-        {
-            "type": "number",
-            "id": "shipping_total",
-            "label": "Shipping Total",
-            "default": 1000,
-            "info": "This is an option to display the delivery, which is preconfigured in the shipping method. All recalculations will be on checkout."
-        },
-        {
-            "type": "checkbox",
-            "id": "show_shipping_total",
-            "label": "Show cart attributes",
-            "default": true
-        },
-        {
-            "type": "select",
-            "id": "img_size",
-            "label": "Image size",
-            "options": [
-                {
-                    "value": "cropped",
-                    "label": "Cropped"
-                },
-                {
-                    "value": "landscape",
-                    "label": "Landscape"
-                },
-                {
-                    "value": "square",
-                    "label": "Square"
-                },
-                {
-                    "value": "portrait",
-                    "label": "Portrait"
-                },
-                {
-                    "value": "circle",
-                    "label": "Circle"
-                }
-            ]
-        },
         {
             "type": "header",
             "content": "Style Options"
@@ -702,22 +663,6 @@
             "id": "divider_color",
             "default": "#4d4d4d",
             "label": "Divider color"
-        },
-        {
-            "type": "header",
-            "content": "Additional Comments "
-        },
-        {
-            "type": "checkbox",
-            "id": "show_cart_note",
-            "label": "Show cart note",
-            "default": true
-        },
-        {
-            "type": "checkbox",
-            "id": "show_cart_attributes",
-            "label": "Show cart attributes",
-            "default": true
         }
     ],
     "blocks": [
