add slider product section

--- a/scss/sections/section-featured-posts.scss
+++ b/scss/sections/section-featured-posts.scss
@@ -36,6 +36,8 @@ swiper-section {
     
     .featured-posts__sub_heading {
         color: var(--sub_title_color-featured-posts);
+        margin-bottom: 5px;
+        text-transform: uppercase;
     }
     
     .featured-posts__heading {
