--- a/scss/components/component-search-tabs.scss
+++ b/scss/components/component-search-tabs.scss
@@ -42,6 +42,7 @@
 .search-tabs__list-item {
     display: block;
     width: 25%;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 991px) {
