--- a/scss/components/component-mobile-menu.scss
+++ b/scss/components/component-mobile-menu.scss
@@ -66,7 +66,7 @@
         background: rgba(0,0,0,0.1);
         backdrop-filter: blur(0.4rem);
         width: calc(100% - 32rem);
-        overflow-y: scroll;
+        //overflow-y: scroll;
         position: fixed;
         left: 0;
         top: 0;
@@ -75,6 +75,7 @@
         transition: all .3s ease;
         backface-visibility: hidden;
         transform: translate(-100%,0);
+        cursor: move;
     }
   
     .header__menu--overlay.menu-opening {
